--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "npm": "^10.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0"
